--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/basketball.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>NBA Contexto</title>
+		<title>Play NBA Games</title>
 	</head>
 	<body>
 		<div id="root"></div>
